syntax = "proto3";

package nym.vpn;

message Empty {}

// Represents the identity of a gateway
message Gateway {
  string id = 1;
}

// Represents a nym-address of the form id.enc@gateway
message Address {
  string nym_address = 1;
}

message Location {
  string two_letter_iso_country_code = 1;
}

message EntryNode {
  oneof entry_node_enum {
    Gateway gateway = 1;
    Location location = 2;
    Empty random_low_latency = 3;
    Empty random = 4;
  }
}

message ExitNode {
  oneof exit_node_enum {
    Address address = 1;
    Gateway gateway = 2;
    Location location = 3;
    Empty random = 4;
  }
}

message MixConnectedStateDetails {
  Address nym_address = 1;
  Address exit_ipr = 2;
  string ipv4 = 3;
  string ipv6 = 4;
}

message WgConnectedStateDetails {
  string entry_ipv4 = 1;
  string exit_ipv4 = 2;
}

message ConnectedStateDetails {
  oneof connected_state_details {
    MixConnectedStateDetails mix = 1;
    WgConnectedStateDetails wg = 2;
  }
}

message Dns {
  string ip = 1;
}

message Url {
  string url = 1;
}

message Endpoints {
  Url nyxd_url = 1;
  Url websocket_url = 2;
  Url api_url = 3;
}

message InfoRequest {}

message InfoResponse {
  string version = 1;
  google.protobuf.Timestamp build_timestamp = 2;
  string triple = 3;
  string git_commit = 4;
  string network_name = 5;
  repeated Endpoints endpoints = 6;
  Url nym_vpn_api_url = 7;
}

message Threshold {
  uint32 min_performance = 1;
}

message ConnectRequest {
  EntryNode entry = 1;
  ExitNode exit = 2;
  Dns dns = 3;
  bool disable_routing = 4;
  bool enable_two_hop = 5;
  bool enable_poisson_rate = 6;
  bool disable_background_cover_traffic = 7;
  bool enable_credentials_mode = 8;
  Threshold min_mixnode_performance = 9;
}

message ConnectResponse {
  bool success = 1;
}

message DisconnectRequest {}
message DisconnectResponse {
  bool success = 1;
}

enum ConnectionStatus {
  STATUS_UNSPECIFIED = 0;
  UNKNOWN = 1;
  NOT_CONNECTED = 2;
  CONNECTING = 3;
  CONNECTED = 4;
  DISCONNECTING = 5;
  CONNECTION_FAILED = 6;
}

import "google/protobuf/timestamp.proto";

message ConnectionDetails {
  Gateway entry_gateway = 1;
  Gateway exit_gateway = 2;
  ConnectedStateDetails protocol_details = 3;
  google.protobuf.Timestamp since = 4;
}

message StatusRequest {}
message StatusResponse {
  ConnectionStatus status = 1;
  ConnectionDetails details = 2;
  Error error = 3;
}

message ConnectionStateChange {
  ConnectionStatus status = 1;
  Error error = 2;
}

message ConnectionStatusUpdate {
  enum StatusType {
    STATUS_TYPE_UNSPECIFIED = 0;

    // Status message that is not mapped to a specific type
    UNKNOWN = 1;

    // Connection to entry gateway established
    // NOTE: currently not implemented by vpnd
    ENTRY_GATEWAY_CONNECTION_ESTABLISHED = 2;

    // Connection to exit router established
    // NOTE: currently not implemented by vpnd
    EXIT_ROUTER_CONNECTION_ESTABLISHED = 3;

    // End-to-end tunnel established and operational
    TUNNEL_END_TO_END_CONNECTION_ESTABLISHED = 4;

    // Entry gateway not routing our mixnet messages
    ENTRY_GATEWAY_NOT_ROUTING_MIXNET_MESSAGES = 5;

    // The exit router is not responding to IPv4 traffic
    EXIT_ROUTER_NOT_RESPONDING_TO_IPV4_PING = 6;

    // The exit router is not responding to IPv6 traffic
    EXIT_ROUTER_NOT_RESPONDING_TO_IPV6_PING = 7;

    // The ip packet router connected to on the exit side is not routing IPv4 traffic
    EXIT_ROUTER_NOT_ROUTING_IPV4_TRAFFIC = 8;

    // The ip packet router connected to on the exit side is not routing IPv6 traffic
    EXIT_ROUTER_NOT_ROUTING_IPV6_TRAFFIC = 9;

    // The end-to-end IPv4 connection appears to be operation correctly
    CONNECTION_OK_IPV4 = 10;

    // The end-to-end IPv6 connection appears to be operation correctly
    CONNECTION_OK_IPV6 = 11;

    // Remaining bandwidth available
    REMAINING_BANDWIDTH = 12;

    // The user has run out of available bandwidth
    NO_BANDWIDTH = 13;
  }

  StatusType kind = 1;

  // Detailed message for logging and debugging
  string message = 2;

  // Optional additional details
  map<string, string> details = 3;
}

message Error {
  enum ErrorType {
    ERROR_TYPE_UNSPECIFIED = 0;

    // An error that was not explicitly handled by the vpn service. This should
    // not happen but it will while we iterate on mapping out all possible
    // error that can happen
    UNHANDLED = 1;

    // If the credential storage does not contain any valid credentials when
    // connecting
    NO_VALID_CREDENTIALS = 2;

    // Generic connection timeout. This could happen  in a number of contexts,
    // and the provided details needs to be investigated to determine what went
    // wrong
    TIMEOUT = 6;

    // Timeout starting the mixnet client
    MIXNET_TIMEOUT = 7;

    // Failed to setup the mixnet storage paths
    MIXNET_STORAGE_PATHS = 19;

    // Failed to create a mixnet client with default storage setup
    MIXNET_DEFAULT_STORAGE = 20;

    // Failed to build the mixnet client instance
    MIXNET_BUILD_CLIENT = 21;

    // Failed to connect to the mixnet
    MIXNET_CONNECT = 22;

    // Failed to connect to the mixnet entry gateway
    MIXNET_ENTRY_GATEWAY = 23;

    // Failed to connect to the IPR
    IPR_FAILED_TO_CONNECT = 25;

    // Looking up gateways can fail in a number of ways.
    GATEWAY_DIRECTORY = 8;

    // Failing to lookup gateways
    GATEWAY_DIRECTORY_LOOKUP_GATEWAYS = 9;

    // Failing to lookup gateway identity
    GATEWAY_DIRECTORY_LOOKUP_GATEWAY_IDENTITY = 10;

    // Failing to lookup the IPR address
    GATEWAY_DIRECTORY_LOOKUP_ROUTER_ADDRESS = 11;

    // Failing to lookup the gateway IP
    GATEWAY_DIRECTORY_LOOKUP_IP = 12;

    // Failing to lookup the entry gateway
    GATEWAY_DIRECTORY_ENTRY = 13;

    // Entry gateway identity not found
    GATEWAY_DIRECTORY_ENTRY_ID = 24;

    // Failing to lookup the entry gateway for a given location
    GATEWAY_DIRECTORY_ENTRY_LOCATION = 14;

    // Failing to lookup the exit gateway
    GATEWAY_DIRECTORY_EXIT = 15;

    // Failing to lookup the exit gateway for a given location
    GATEWAY_DIRECTORY_EXIT_LOCATION = 16;

    // Invalid configuration attempted, with the same entry and exit gateway
    GATEWAY_DIRECTORY_SAME_ENTRY_AND_EXIT_GW = 17;

    // Client ran out of allocated bandwidth
    OUT_OF_BANDWIDTH = 18;
  }

  ErrorType kind = 1;

  // Detailed error message for logging and debuggning
  string message = 2;

  // Optional additional details
  map<string, string> details = 3;
}

message ImportUserCredentialRequest {
  bytes credential = 1;
}

message ImportUserCredentialResponse {
  bool success = 1;
  ImportError error = 2;
  google.protobuf.Timestamp expiry = 3;
}

message ImportError {
  enum ImportErrorType {
    IMPORT_ERROR_TYPE_UNSPECIFIED = 0;

    // Credential import is not supported while the vpn is already connected
    VPN_RUNNING = 1;

    // Importing the same credential twice will return an error
    CREDENTIAL_ALREADY_IMPORTED = 2;

    // If the credential storage fails in some way. It's very likely due to a
    // permission error.
    STORAGE_ERROR = 3;

    // If the provided credential fails to deserialize. This is probably due to
    // incorrect credential, but it could also be due to other internal reasons
    DESERIALIZATION_FAILURE = 4;

    // Credentials have a date when they expire
    CREDENTIAL_EXPIRED = 5;
  }

  ImportErrorType kind = 1;

  // Detailed error message for logging and debugging
  string message = 2;

  // Optional additional details
  map<string, string> details = 3;
}

message AsEntry {
  bool can_connect = 1;
  bool can_route = 2;
}

message AsExit {
  bool can_connect = 1;
  bool can_route_ip_v4 = 2;
  bool can_route_ip_v6 = 3;
  bool can_route_ip_external_v4 = 4;
  bool can_route_ip_external_v6 = 5;
}

message ProbeOutcome {
  AsEntry as_entry = 1;
  AsExit as_exit = 2;
}

message Probe {
  google.protobuf.Timestamp last_updated_utc = 1;
  ProbeOutcome outcome = 2;
}

message EntryGateway {
  Gateway id = 1;
  Location location = 2;
  Probe last_probe = 3;
}

message ListEntryGatewaysRequest {}
message ListEntryGatewaysResponse {
  repeated EntryGateway gateways = 1;
}

message ExitGateway {
  Gateway id = 1;
  Location location = 2;
  Probe last_probe = 3;
}

message ListExitGatewaysRequest {}
message ListExitGatewaysResponse {
  repeated ExitGateway gateways = 1;
}

message ListEntryCountriesRequest {}
message ListEntryCountriesResponse {
  repeated Location countries = 1;
}

message ListExitCountriesRequest {}
message ListExitCountriesResponse {
  repeated Location countries = 1;
}

message StoreAccountRequest {
  string mnemonic = 1;
  uint32 nonce = 2;
}

message StoreAccountResponse {
  bool success = 1;
  StoreAccountError error = 2;
}

message StoreAccountError {
  enum StoreAccountErrorType {
    STORE_ACCOUNT_ERROR_UNSPECIFIED = 0;

    // The provided mnemonic was not able to be parsed
    INVALID_MNEMONIC = 1;

    // General error from the storage backend
    STORAGE = 2;
  }

  StoreAccountErrorType kind = 1;

  // Detailed error message for logging and debugging
  string message = 2;

  // Optional additional details
  map<string, string> details = 3;
}

service NymVpnd {
  rpc Info (InfoRequest) returns (InfoResponse) {}
  rpc VpnConnect (ConnectRequest) returns (ConnectResponse) {}
  rpc VpnDisconnect (DisconnectRequest) returns (DisconnectResponse) {}
  rpc VpnStatus (StatusRequest) returns (StatusResponse) {}
  rpc ImportUserCredential (ImportUserCredentialRequest) returns (ImportUserCredentialResponse) {}
  rpc ListenToConnectionStateChanges (Empty) returns (stream ConnectionStateChange) {}
  rpc ListenToConnectionStatus (Empty) returns (stream ConnectionStatusUpdate) {}

  rpc ListEntryGateways (ListEntryGatewaysRequest) returns (ListEntryGatewaysResponse) {}
  rpc ListExitGateways (ListExitGatewaysRequest) returns (ListExitGatewaysResponse) {}
  rpc ListEntryCountries (ListEntryCountriesRequest) returns (ListEntryCountriesResponse) {}
  rpc ListExitCountries (ListExitCountriesRequest) returns (ListExitCountriesResponse) {}

  rpc StoreAccount (StoreAccountRequest) returns (StoreAccountResponse) {}
}

